--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                             
                                               <div>
                                                  <img width="100%" src="images/piazzolla.jpg" alt="fotopiazzolla">
-                                                   <button width="100%" type="button" class="btn btn-light btn-lg">Astor Piazzolla
+                                                   <button width="100%" type="button" class="btn btn-light btn-lg">
                                                       <div><a href="https://www.biografiasyvidas.com/biografia/p/piazzola.htm"> Astor Piazzolla 1921 - 1992 (Biografía)</a>
                                                    </button>
                                               </div>
